No underline for links in list

--- a/resources/list.css
+++ b/resources/list.css
@@ -1,7 +1,11 @@
 .aslink {
-  cursor:pointer;
-  color:blue;
-  text-decoration:underline;
+  cursor: pointer;
+  color: blue;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
